# billiard_bot

./: .gitignore  Dockerfile  alembic.ini  pyproject.toml  task_scheduler.py
alembic/: env.py
alembic/versions/: create_booking_tables.py
app/: main.py
app/infrastructure/database/models/: booking.py  client.py  reservation.py  table.py
app/infrastructure/database/repositories/: booking_repository.py  client_repository.py  table_repository.py
app/infrastructure/google/: sheets_service.py
app/repositories/: client_repository.py  reservation_repository.py
app/schemas/: booking.py  client.py  table.py
app/tgbot/: tgbot.py
app/tgbot/filters/: admin.py
app/tgbot/handlers/: admin.py  booking.py  navigation.py
app/tgbot/keyboards/: booking.py  menu.py
app/tgbot/middlewares/: database.py  google_sheets.py
app/tgbot/states/: booking.py
app/tgbot/utils/: booking.py  date_helpers.py
config/: config.py  settings.toml
scripts/: run_migrations.py
